--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -1,8 +1,46 @@
 @import '../../public/styles/variables.scss';
 
+.headerImage {
+  width: 100%;
+  min-height: 120px; 
+  border-radius: 0 0 16px 16px; 
+  background-size: cover; 
+  background-position: center; 
+  padding-top: 25%;
+}
+.profilePicture {
+  height: 160px; 
+  width: 160px; 
+  border-radius: 100%; 
+  border: 4px solid white; 
+  box-shadow: $shadow-3;
+}
+.profileCard {
+  transition: $transition-standard;
+  &:hover {
+    box-shadow: $shadow-5;
+  }
+}
 .job {
   padding: 32px;
+  transition: $transition-standard;
+  overflow: hidden;
   &:not(:last-child) {
-    border-bottom: 1px solid $dark-400;
+    border-bottom: 1px solid $dark-300;
   }
+  &:first-child {
+    border-top-left-radius: $radius-medium;
+    border-top-right-radius: $radius-medium;
+  }
+  &:last-child {
+    border-bottom-left-radius: $radius-medium;
+    border-bottom-right-radius: $radius-medium;
+  }
+  &:hover {
+    background: $dark-100;
+    text-decoration: none;
+  }
+}
+.footer {
+  background-color: $dark-100;
 }
