--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -32,8 +32,9 @@ h1 { font-size: 64px; }
 h2 { font-size: 48px; }
 h3 { font-size: 34px; }
 h4 { font-size: 28px; }
+h5 { font-size: 24px; }
 
-p.extra-large { font-size: 24px; }
+// p.extra-large { font-size: 24px; }
 p.large {font-size: 20px; }
 p { font-size: 16px; }
 p.small { font-size: 14px; }
@@ -61,7 +62,16 @@ a {
 .text-light-low { color: $light-700; }
 .text-light-dis { color: $light-600; }
 
-hr {border-top: 1px solid $dark-400;}
+.text-success-high { color: $success-900; }
+.text-success-med { color: $success-800; }
+.text-success-low { color: $success-700; }
+.text-success-dis { color: $success-600; }
+
+.font-weight-medium { font-weight: 500; }
+.font-weight-semibold { font-weight: 600; }
+.font-weight-bold { font-weight: 700; }
+
+hr {border-top: 1px solid $dark-300;}
 
 // Colours
 
@@ -360,7 +370,7 @@ a.btn, input.btn, button.btn {
       }
     }
   }
-  &.disabled {
+  &:disabled {
     &.high {
       background: $dark-400!important; 
       color: $dark-600!important; 
@@ -559,6 +569,7 @@ input[type="text"], input[type="password"], input[type="email"] {
 
 /* Customize the label (the container) */
 .checkbox-container {
+  margin-bottom: 0;
   display: block;
   position: relative;
   padding-left: 40px;
@@ -574,7 +585,7 @@ input[type="text"], input[type="password"], input[type="email"] {
     line-height: 28px;
   }
   &.large {
-    font-size: 24px;
+    /*font-size: 24px;*/
     line-height: 36px;
     padding-left: 48px;
     .checkmark {
@@ -603,9 +614,26 @@ input[type="text"], input[type="password"], input[type="email"] {
 .checkbox-container:hover input ~ .checkmark {
   border: 2px solid $primary-900;
 }
-.checkbox-container input:checked ~ .checkmark {
-  background-color: $primary-900;
-  border: 2px solid $primary-900;
+.checkbox-container input{
+  &:checked ~ .checkmark {
+    background-color: $primary-900;
+    border: 2px solid $primary-900;
+  }
+  &:disabled ~ .checkmark {
+    background-color: $dark-300;
+    border: 2px solid transparent;
+    &:after {
+      left: 33%;
+      top: 12%;
+      width: 35%;
+      height: 60%;
+      border: solid $dark-600;
+      border-width: 0 2px 2px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
+  }
 }
 .checkmark:after {
   content: "";
@@ -641,6 +669,61 @@ input[type="text"], input[type="password"], input[type="email"] {
   border-radius: $radius-v-small;
   transition: $transition-long;
   //transition: width 0.6s ease;
+}
+
+// Toasters
+
+.Toastify__toast-container--top-right {
+  top: calc(4rem + 1rem)!important;
+}
+
+@media (min-width: $breakpoint-sm) {
+  .Toastify__toast-container--top-right {
+    top: calc(5rem + 1rem)!important;
+  }
+}
+
+@media (min-width: $breakpoint-lg) {
+  .Toastify__toast-container--top-right {
+    top: 1rem!important;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .Toastify__toast-container {
+    width: 100%!important;
+    padding-left: 1rem!important;
+    padding-right: 1rem!important;
+  }
+}
+
+.Toastify__toast {
+  border-radius: 0.5rem!important;
+  display: flex!important;
+  padding: 1rem!important;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif!important;
+  box-shadow: $shadow-3!important;
+}
+
+.Toastify__toast--default {
+  background: $dark-900!important;
+  color: $white!important;
+}
+
+.Toastify__progress-bar--default {
+  background: $dark-900!important;
+}
+
+.Toastify__close-button {
+  align-self: center!important;
+}
+
+.Toastify__close-button > svg {
+  fill: $white!important;
+  height: 24px!important;
+  width: 24px!important;
 }
 
 // Modal
