landing page hero section

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -34,7 +34,7 @@ h3 { font-size: 34px; }
 h4 { font-size: 28px; }
 h5 { font-size: 24px; }
 
-// p.extra-large { font-size: 24px; }
+p.extra-large { font-size: 24px; }
 p.large {font-size: 20px; }
 p { font-size: 16px; }
 p.small { font-size: 14px; }
