Update fonts to plus jakarta

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,8 +1,8 @@
 @import '../public/styles/variables.scss';
 
-.headingUnderlineContainer {
+/*.headingUnderlineContainer {
   box-shadow: inset 0px -12px 0px 0px white, inset 0px -28px 0px 0px $primary-900;
-}
+}*/
 
 .heroImageWrapper {
   position: relative;
