--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1,8 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import './variables.scss';
 
-@import '../fonts/inter/inter.css';
-@import '../fonts/visuelt/stylesheet.css';
+@import '../fonts/plusJakartaSans/PlusJakartaSans.css';
 
 html {
   transition: $transition-standard;
@@ -14,7 +13,8 @@ body {
   font-size: 16px; 
   line-height: 1.5;
   color: $dark-800; 
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  font-weight: 500;
+  font-family: 'PlusJakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -25,7 +25,7 @@ h1, h2, h3, h4 {
   line-height: 1.2;
   color: $dark-900; 
   font-weight: 900;
-  font-family: 'Visuelt Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  font-family: 'PlusJakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;}
 h1 { font-size: 64px; }
