--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -375,7 +375,7 @@ a.btn, input.btn, button.btn {
       }
     }
   }
-  &:disabled {
+  &:disabled, &.disabled {
     &.high {
       background: $dark-400!important; 
       color: $dark-600!important; 
