--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -321,6 +321,7 @@ a.btn, input.btn, button.btn {
   align-items: center;
   justify-content: center;
   width: fit-content;
+  white-space: nowrap;
   &:focus {
     box-shadow: 0 0 0 0.2rem $primary-600;
   }
@@ -894,6 +895,34 @@ input[type="text"], input[type="password"], input[type="email"] {
       font-size: 24px;
       line-height: 36px;
     }
+  }
+}
+
+// Text area
+
+textarea { 
+  border-radius: $radius-small; 
+  padding: 10px 18px;  
+  font-size: 20px;
+  line-height: 32px;
+  border: 2px solid $dark-light;
+  outline: 0;
+  //width: 100%; //maybe delete
+  &:focus {
+    border-color: $primary-900;
+  }
+  &.error {
+    border-color: $error-900;
+  }
+  &.small {
+    padding: 8px 14px; 
+    font-size: 16px; 
+    line-height: 28px;
+  }
+  &.large {
+    padding: 12px 22px; 
+    font-size: 24px;
+    line-height: 36px;
   }
 }
 
