add blog index page

--- a/pages/blog/blog.module.scss
+++ b/pages/blog/blog.module.scss
@@ -17,3 +17,12 @@
   width: 100%;
   display: block;
 }
+
+.postCard {
+  transition: $transition-standard;
+  border-color: $dark-300;
+  &:hover {
+    cursor: pointer;
+    box-shadow: $shadow-4;
+  }
+}
