--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -17,6 +17,7 @@
 }
 .profileCard {
   transition: $transition-standard;
+  overflow:hidden;
   &:hover {
     box-shadow: $shadow-5;
   }
@@ -30,14 +31,6 @@
   overflow: hidden;
   &:not(:last-child) {
     border-bottom: 1px solid $dark-300;
-  }
-  &:first-child {
-    border-top-left-radius: $radius-medium;
-    border-top-right-radius: $radius-medium;
-  }
-  &:last-child {
-    border-bottom-left-radius: $radius-medium;
-    border-bottom-right-radius: $radius-medium;
   }
   &:hover {
     background: $dark-100;
