add ATS blog post

--- a/pages/blog/blog.module.scss
+++ b/pages/blog/blog.module.scss
@@ -38,6 +38,7 @@
   transition: $transition-standard;
   border-color: $dark-300;
   gap: 24px;
+  height: 100%;
   @media (min-width: $breakpoint-md) {
     gap: 48px;
   }
