add blog post for applying without exp

--- a/pages/blog/blog.module.scss
+++ b/pages/blog/blog.module.scss
@@ -39,6 +39,7 @@
   border-color: $dark-300;
   gap: 24px;
   height: 100%;
+  box-shadow: $shadow-2;
   @media (min-width: $breakpoint-md) {
     gap: 48px;
   }
