--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -13,11 +13,12 @@
   width: 160px; 
   border-radius: 100%; 
   border: 4px solid white; 
-  box-shadow: $shadow-3;
+  // box-shadow: $shadow-2;
 }
 .profileCard {
   transition: $transition-standard;
   overflow:hidden;
+  // border:1px solid $dark-300 ;
   &:hover {
     box-shadow: $shadow-5;
   }
