--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1155,6 +1155,10 @@ textarea {
   backdrop-filter: blur(6px);
 }
 
+.modal-backdrop.show {
+  opacity: 0.18;
+}
+
 .modal-content {
   position: relative;
   display: flex;
