--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -292,6 +292,14 @@ hr {border-top: 1px solid $dark-300;}
 .border-error-200 { border-color: $error-200!important }
 .border-error-100 { border-color: $error-100!important }
 
+// Shadows
+
+.shadow-0 { box-shadow: $shadow-0; }
+.shadow-1 { box-shadow: $shadow-1; }
+.shadow-2 { box-shadow: $shadow-2; }
+.shadow-3 { box-shadow: $shadow-3; }
+.shadow-4 { box-shadow: $shadow-4; }
+.shadow-5 { box-shadow: $shadow-5; }
 
 // Buttons
 
