edit link target zone on profile

--- a/components/profile/profile.module.scss
+++ b/components/profile/profile.module.scss
@@ -21,7 +21,7 @@
   border: 1px solid $dark-300 ;
   &:hover {
     box-shadow: $shadow-5;
-    * {
+    a {
       text-decoration: none;
     }
   }
