update dark colour and edit spelling bug

--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -62,7 +62,7 @@ $warning-200:rgba($warning-900, 0.05);
 $warning-100: rgba($warning-900, 0.03);
 
 // Dark colours
-$dark-900: #231F20; // High text
+$dark-900: #15121c; // High text
 $dark-900-hover: lighten($dark-900, 10%);
 $dark-light: rgba($dark-900, 0.1);
 $dark-800: rgba($dark-900, 0.72); // Medium text
