onboarding and header changes

--- a/pages/settings/settings.module.scss
+++ b/pages/settings/settings.module.scss
@@ -8,6 +8,7 @@
 .planCard {
   border: 2px solid $dark-100;
   transition: $transition-standard;
+  background: $light-900;
   &:hover{
     border: 2px solid $primary-900;
     box-shadow: $shadow-5;
