--- a/components/profile/Bento.module.scss
+++ b/components/profile/Bento.module.scss
@@ -38,9 +38,10 @@ $bento-dark-900: #131119;
     }
   }
   &.bentoCardImage {
+    position: relative;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
     transition: $transition-standard;
     &::after {
       content: '';
@@ -51,12 +52,10 @@ $bento-dark-900: #131119;
       left: 0;
       background: linear-gradient(180deg, rgba(19, 17, 25, 0) 0%, #131119 100%), linear-gradient(0deg, rgba(19, 17, 25, 0.2), rgba(19, 17, 25, 0.2));
     }
-    &:hover {
-      background-size: 120%;
-    }
   }
   &:hover {
     text-decoration: none!important;
+    transform: scale(1.02);
   }
 }
 
