add staccato template

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -2,6 +2,7 @@
 @import './variables.scss';
 
 @import '../fonts/plusJakartaSans/web/PlusJakartaSans.css';
+@import '../fonts/cormorantGaramond/stylesheet.css';
 
 html {
   transition: $transition-standard;
