replace font on staccato theme

--- a/components/profile/StaccatoProfile.module.scss
+++ b/components/profile/StaccatoProfile.module.scss
@@ -1,7 +1,7 @@
 @import '../../public/styles/variables.scss';
 
 .heading {
-  font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', Times, serif; 
+  font-family: 'Gallery Modern', Georgia, 'Times New Roman', Times, serif; 
   // font-family: 'Gallery Modern', 'Cormorant Garamond', Georgia, 'Times New Roman', Times, serif; 
   line-height: 80%;
   font-weight: 500;
