--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -3,6 +3,7 @@
 
 @import '../fonts/plusJakartaSans/web/PlusJakartaSans.css';
 @import '../fonts/cormorantGaramond/stylesheet.css';
+@import '../fonts/galleryModern/stylesheet.css';
 
 html {
   transition: $transition-standard;
