--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -74,6 +74,16 @@
     svg { margin-left: 12px}
   }
 }
+.templatesGrid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 64px;
+  @media (min-width: $breakpoint-md) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
+}
 .iframeWrapper {
   position: relative;
   overflow: hidden;
