update font styles on staccato

--- a/components/profile/StaccatoProfile.module.scss
+++ b/components/profile/StaccatoProfile.module.scss
@@ -38,7 +38,7 @@
   font-size: 24px;
   font-weight: 300;
   letter-spacing: -0.03rem;
-  color: #7B8386;
+  color: $dark-800;
   @media (min-width: $breakpoint-md) {
     font-size: 28px;
   }
