--- a/pages/profile/profile.module.scss
+++ b/pages/profile/profile.module.scss
@@ -9,10 +9,14 @@
   padding-top: 25%;
 }
 .profilePicture {
+  // margin-top: 48px;
   height: 160px; 
   width: 160px; 
   border-radius: 100%; 
   border: 4px solid white; 
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
   // box-shadow: $shadow-2;
 }
 .profileCard {
