--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -95,6 +95,11 @@ $white-hover: darken($white, 10%);
 $black: #000;
 $black-hover: lighten($black, 10%);
 
+// Gradients
+
+$gradient-1: linear-gradient(245.08deg, #EF6F39 0%, #EA2B2B 56.25%, #B539EF 98.7%);
+$gradient-2: linear-gradient(245.08deg, #39EFE4 0%, #7F2BEA 56.25%, #B539EF 98.7%);
+
 // RADII
 
 //Border-radius
