--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -267,6 +267,26 @@ hr {border-top: 1px solid $dark-300;}
 .border-1 { border-width: 1px!important };
 .border-2 { border-width: 2px!important };
 
+.border-0 { border-width: 0!important };
+.border-1 { border-width: 1px!important };
+.border-2 { border-width: 2px!important };
+
+.border-top-0 { border-top-width: 0!important };
+.border-top-1 { border-top-width: 1px!important };
+.border-top-2 { border-top-width: 2px!important };
+
+.border-right-0 { border-right-width: 0!important };
+.border-right-1 { border-right-width: 1px!important };
+.border-right-2 { border-right-width: 2px!important };
+
+.border-bottom-0 { border-bottom-width: 0!important };
+.border-bottom-1 { border-bottom-width: 1px!important };
+.border-bottom-2 { border-bottom-width: 2px!important };
+
+.border-left-0 { border-left-width: 0!important };
+.border-left-1 { border-left-width: 1px!important };
+.border-left-2 { border-left-width: 2px!important };
+
 .border-transparent { border-color: transparent!important }
 
 .border-primary-900 { border-color: $primary-900!important }
